Update pom.xml -> JDK 17